[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhmsh"
version = "0.0.5"
authors = [
  { name="Collin Hinson", email="collin@bizhandyman.com" },
]
description = "A lightweight OpenAI-powered Bash actuator."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai >= 0.28.1"
]

[project.scripts]
bhmsh = "bhmsh.bhmsh:main"

[project.urls]
"Homepage" = "https://github.com/Business-Handyman-LLC/bhm-sh"
"Bug Tracker" = "https://github.com/Business-Handyman-LLC/bhm-sh/issues"
